# QUORIDOR2

./: Aide.c  Aide.h  Annulation du coup  CMakeLists.txt  Calcul du score  affichage.c  affichage.h  aide.c  aide.h  blocage de la partie  blocage partie  cas particulier  condition.c  condition.h  deplacement  esthetique.c  esthetique.h  fonction.joueur.c  fonction.joueur.h  fonctionjoueurs.h  main.c  new plateau.h  placement des barrieres  plateau. c  plateau.c  plateau.h  sauvegarde.c  sauvegarde.h  score.c  score.h  timer.c  timer.h
